Bug 136354 - FILEOPEN DOCX Vertical image alignment Inner/Outer relative to bottom margin incorrect
Summary: FILEOPEN DOCX Vertical image alignment Inner/Outer relative to bottom margin ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2020-09-01 08:03 UTC by NISZ LibreOffice Team
Modified: 2020-09-11 18:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (116.10 KB, image/png)
2020-09-01 08:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-01 08:03:35 UTC
Created attachment 164951 [details]
Screenshot of the original document side by side in Word and Writer

attachment #164653 [details] shows images anchored to the top header that have vertical alignment of inside or outside set relative from bottom margin.
When opened in Writer the image with inside alignment appears correctly at the top of the bottom footer, and the one with outside alignment appears at the top of the bottom footer instead of at the bottom of it.


Steps to reproduce:
    1. Open attachment 164653 [details] 

Actual results:
Rightmost shape appears at the top of the bottom margin.

Expected results:
Rightmost shape should appear at the bottom of the bottom margin.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 1e0cfd5662d95cea84e80e4fe10d52c3b1101ae6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 László Németh 2020-09-04 07:13:44 UTC
tdf#136354 DOCX import: fix vertical mirrored alignment on bottom margin

The relative mirrored vertical alignment (INSIDE and OUTSIDE) of
bottom page margin wasn't handled.

Note: this fix doesn't check mirroring (if it's possible to mirror
vertically either, for example, by mixing portrait and landscape
mode in a document), only support INSIDE as OUTSIDE as alternative
names of TOP and BOTTOM in case of alignment to bottom margins.

Follow-up of commit d54264e34c1ccc0eaf4178ab165a843028500223
(tdf#133071 DOCX import: fix vertical alignment to bottom page margin)
Comment 2 Commit Notification 2020-09-04 07:13:53 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d362c0625fa92e0f4d4472f197bd1d68fba522f1

tdf#136354 DOCX import: fix vertical mirrored alignment on bottom margin

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2020-09-04 07:17:01 UTC
It would be fine to check, did INSIDE and OUTSIDE get some role in mirrored pages. It was a problem in Word:

http://www.addbalance.com/word/mirrored_margins_landscape.htm

Maybe MSO 2020 fixed this problem, and vertical INSIDE and OUTSIDE means horizontal INSIDE and OUTSIDE of landscape pages, so we may need to check and handle that, too.
Comment 4 László Németh 2020-09-04 07:22:32 UTC
Or INSIDE/OUTSIDE are equivalent terms of CSS' inner/outer, as mentioned by Regina Henschel?

https://bugs.documentfoundation.org/show_bug.cgi?id=135720#c10
Comment 5 BogdanB 2020-09-11 18:38:36 UTC
verified in
Version: 7.1.0.0.alpha0+
Build ID: 3a22f5a589e822e7ca8bbb00e38a3aff93ed7ba5
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded