tdf#136354 DOCX import: fix vertical mirrored alignment on bottom margin

The relative mirrored vertical alignment (INSIDE and OUTSIDE) of
bottom page margin wasn't handled.

Note: this fix doesn't check mirroring (if it's possible to mirror
vertically either, for example, by mixing portrait and landscape
mode in a document), only support INSIDE as OUTSIDE as alternative
names of TOP and BOTTOM in case of alignment to bottom margins.

Follow-up of commit d54264e34c1ccc0eaf4178ab165a843028500223
(tdf#133071 DOCX import: fix vertical alignment to bottom page margin)

Co-authored-by: Attila Szűcs (NISZ)

Change-Id: I6d844f57505bcda1faa7dd6112d1cda666c3ac07